# sonar

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  azure-pipelines.yml
.github/: dependabot.yml
.travis/: after_success.sh  install.sh  script.sh
ci/: azure-install-rust.yml
sonar/: Cargo.toml
sonar-window/: Cargo.toml
sonar-window/src/: lib.rs
sonar/src/: lib.rs
src/window/: Cargo.toml
src/window/src/: event.rs  monitor.rs  window.rs
