[package]
name = "sonar"
version = "0.1.0"
authors = ["James Chapman <toxic.wolf666@gmail.com>"]
description = "3D game engine written in Rust"
license = "MIT/Apache-2.0"

homepage = "https://github.com/toxicwolf/sonar"
repository = "https://github.com/toxicwolf/sonar"

[dependencies]
sonar-window = { version = "0.1.0", path = "../sonar-window", optional = true }

[features]
default = ["window"]
window = ["sonar-window"]
