[package]
name = "sonar-window"
version = "0.1.0"
authors = ["James Chapman <jchapman3000@gmail.com>"]
description = "Cross-platform window and graphics context creation library"
license = "MIT/Apache-2.0"

homepage = "https://github.com/sonar-rs/sonar"
repository = "https://github.com/sonar-rs/sonar"
documentation = "https://sonar-rs.github.io/sonar/sonar_window/index.html"
